--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,7 @@ author: Tobe O <thosakwe@gmail.com>
 homepage: https://github.com/angel-dart/angel_sqljocky
 dependencies:
   angel_framework: ">=1.0.0-dev < 2.0.0"
+  furlong: ">=1.0.0-dev <2.0.0"
   json_god: ">=2.0.0-beta <3.0.0"
   sqljocky: ">=0.14.1 <0.15.0"
 dev_dependencies:
