--- a/angel_sql/pubspec.yaml
+++ b/angel_sql/pubspec.yaml
@@ -1,13 +1,13 @@
 name: angel_sql
-version: 1.0.0-dev+1
-description: SQL-enabled services for the Angel framework. Works well with Furlong.
+version: 1.0.0
+description: SQL-backed services for the Angel framework; generic backend.
 author: Tobe O <thosakwe@gmail.com>
 homepage: https://github.com/angel-dart/angel_sqljocky
 environment:
-  sdk: ">=1.19.0"
+  sdk: ">=2.0.0-dev <3.0.0"
 dependencies:
   angel_framework: ^2.0.0-alpha
 dev_dependencies:
   angel_test: ^2.0.0-alpha
-  http: ^0.11.3
+  http: ^0.12.0
   test: ^1.0.0
