--- a/angel_sql_postgres/pubspec.yaml
+++ b/angel_sql_postgres/pubspec.yaml
@@ -1,12 +1,14 @@
-name: angel_sql
+name: angel_sql_postgres
+description: PostgreSQL bindings for package:angel_sql, Angel's SQL solution.
 version: 1.0.0
-description: SQL-backed services for the Angel framework; generic backend.
 author: Tobe O <thosakwe@gmail.com>
 homepage: https://github.com/angel-dart/sql
 environment:
   sdk: ">=2.0.0-dev <3.0.0"
 dependencies:
-  angel_framework: ^2.0.0-alpha
+  angel_sql:
+    path: ../angel_sql
+  postgres: ^1.0.0
 dev_dependencies:
   angel_test: ^2.0.0-alpha
   http: ^0.12.0
